--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.user.demoexample">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+    <uses-permission-sdk-23 android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission-sdk-23>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".SplashScreenActivity"
-            android:theme="@style/AppSplash">
+            android:theme="@style/AppSplash"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,9 +24,12 @@
         <activity android:name=".MainActivity">
         </activity>
         <activity android:name=".SignupActivity" />
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".GalleryActivity" />
-        <activity android:name=".HomeDetailActivity"></activity>
+        <activity android:name=".HomeActivity"
+            android:theme="@style/AppSplash" />
+        <activity android:name=".GalleryActivity"
+            android:theme="@style/AppSplash"/>
+        <activity android:name=".HomeDetailActivity"
+            android:theme="@style/AppSplash"></activity>
     </application>
 
 </manifest>
