--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.user.demoexample">
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-    <uses-permission-sdk-23 android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission-sdk-23>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-permission-sdk-23 android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -12,24 +13,31 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplashScreenActivity"
-            android:theme="@style/AppSplash"
-            android:noHistory="true">
+        <activity
+            android:name=".SplashScreenActivity"
+            android:noHistory="true"
+            android:theme="@style/AppSplash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-        </activity>
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".SignupActivity" />
-        <activity android:name=".HomeActivity"
+        <activity
+            android:name=".HomeActivity"
             android:theme="@style/AppSplash" />
-        <activity android:name=".GalleryActivity"
-            android:theme="@style/AppSplash"/>
-        <activity android:name=".HomeDetailActivity"
-            android:theme="@style/AppSplash"></activity>
+        <activity
+            android:name=".GalleryActivity"
+            android:theme="@style/AppSplash" />
+        <activity
+            android:name=".HomeDetailActivity"
+            android:theme="@style/AppSplash" />
+        <activity
+            android:name=".FragmentsActivity"
+            android:label="@string/title_activity_fragments"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
